--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
-- Asset Source and Owner Setter
+- Asset Source and Owner Resolving
+- Promotion Repository Data Class
+- Create Promotable Class Implementation
