--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-- Asset Source and Owner Resolving
-- Promotion Repository Data Class
+- Asset Source and Owner Resolving - Done
+- Promotion Repository Data Class - Done
 - Create Promotable Class Implementation
