--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
 - Asset Source and Owner Resolving - Done
 - Promotion Repository Data Class - Done
 - Create Promotable Class Implementation
+- Create Promotion Item Implementation
+- Shopping Cart
+- Customer
