--- a/TODO
+++ b/TODO
@@ -1,7 +1,13 @@
 - Asset Source and Owner Resolving - Done
 - Promotion Repository Data Class - Done
-- Create Promotable Class Implementation
+- Create Promotable Class Implementation - Done
 - Create Promotion Item Implementation - Done
+- Create Promotable Subscriber
+- Create Transaction Ownerable Subscriber
+- Create Transaction Item Implementation
+- Create Transaction Item Subscriber
+- Create Transaction Benefit Implementation
+- Create Transaction Benefit Subscriber
 - Shopping Cart
 - Customer
 - Util
