--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 - Promotion Repository Data Class - Done
 - Create Promotable Class Implementation - Done
 - Create Promotion Item Implementation - Done
-- Create Promotable Subscriber
+- Create Promotable Subscriber - Done
 - Create Transaction Ownerable Subscriber
 - Create Transaction Item Implementation
 - Create Transaction Item Subscriber
