--- a/TODO
+++ b/TODO
@@ -6,8 +6,8 @@
 - Create Transaction Ownerable Subscriber
 - Create Transaction Item Implementation
 - Create Transaction Item Subscriber
-- Create Transaction Benefit Implementation
-- Create Transaction Benefit Subscriber
+- Create Transaction Benefit Implementation - Done
+- Create Transaction Benefit Subscriber - Done
 - Shopping Cart
 - Customer
 - Util
