--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@
 - Create Transaction Item Subscriber
 - Create Transaction Benefit Implementation - Done
 - Create Transaction Benefit Subscriber - Done
+- ShoppingCart Owner Implementation
 - Shopping Cart
 - Customer
 - Util
