--- a/TODO
+++ b/TODO
@@ -3,12 +3,14 @@
 - Create Promotable Class Implementation - Done
 - Create Promotion Item Implementation - Done
 - Create Promotable Subscriber - Done
+- Price Log History Implementation - Done
 - Create Transaction Ownerable Subscriber
 - Create Transaction Item Implementation
 - Create Transaction Item Subscriber
 - Create Transaction Benefit Implementation - Done
 - Create Transaction Benefit Subscriber - Done
-- ShoppingCart Owner Implementation
+- Shopping Cart Owner Implementation
+- Shopping Cart Item Implementation
 - Shopping Cart
 - Customer
 - Util
