prepare product management

--- a/TODO
+++ b/TODO
@@ -9,7 +9,8 @@
 - Create Transaction Item Subscriber
 - Create Transaction Benefit Implementation - Done
 - Create Transaction Benefit Subscriber - Done
-- Shopping Cart Owner Implementation
+- Shopping Cart Owner Implementation - Done
+- Resolve Product Management in Transaction Benefit and Promotion Item
 - Shopping Cart Item Implementation
 - Shopping Cart
 - Customer
