finish product management

--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@
 - Create Transaction Benefit Implementation - Done
 - Create Transaction Benefit Subscriber - Done
 - Shopping Cart Owner Implementation - Done
-- Resolve Product Management in Transaction Benefit and Promotion Item (Solusinya dengan membuat factory pattern dari product repository lalu membuat subscriber untuk product)
+- Resolve Product Management in Transaction Benefit and Promotion Item - Done
 - Create Transaction Ownerable Subscriber
 - Create Transaction Item Implementation
 - Create Transaction Item Subscriber
