--- a/TODO
+++ b/TODO
@@ -13,6 +13,13 @@
 - Create Transaction Item Implementation - Done
 - Create Transaction Item Subscriber - Done
 - Shopping Cart to Transaction Transformer (Order Management) - Done
+- Shopping Item - Product ID to Product Transformer
 - Customer
 - Payment
 - Product Sibling
+
+TEST:
+- Create Customer - OK
+- Create Supplier - OK
+- Create Product - OK
+- Create Promotion - OK
