--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@
 - Create Transaction Item Subscriber - Done
 - Shopping Cart to Transaction Transformer (Order Management) - Done
 - Shopping Item - Product ID to Product Transformer - Done
-- Payment - Implement Paymentable Interface
+- Payment - Implement Payment Interface
 - Payment - Create Payment Subscriber
 - Customer
 - Payment
