--- a/TODO
+++ b/TODO
@@ -17,7 +17,8 @@
 - Payment - Implement Payment Interface - Done
 - Payment - Create Payment Subscriber - Done
 - Create Payment Compiler Pass - Done
-- Create Payment Method
+- Create Payment Method - Done
+- Create Manual Payment
 - Customer
 - Product Sibling
 
